# Github-aware-RAG

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml
backend/: ingester.py  main.py  metadata_db.py  models.py  pyproject.toml
extension/: .vscodeignore  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
extension/backend/: chunker.py  config.py  github_client.py  retriever.py
extension/scripts/: release-prepare.mjs  sync-backend.mjs
extension/src/: auth.ts  backendClient.ts  extension.ts
extension/src/panels/: SearchPanel.ts
extension/src/webview/: App.tsx  index.tsx
extension/src/webview/components/: RepoList.tsx  ResultCard.tsx  SearchBar.tsx
