[project]
name = "github-aware-rag-backend"
version = "0.1.0"
description = "Local FastAPI backend for GitHub-Aware-RAG"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.2",
    "fastapi>=0.128.0",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.24.0",
    "pygithub>=2.8.1",
    "uvicorn[standard]>=0.39.0",
]

[tool.uv]
package = false
